<resources>
    <string name="app_name">Calculator</string>

    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal_healthy_weight">Normal (healthy weight)</string>
    <string name="overweight">Overweight</string>
    <string name="moderately_obese">Moderately obese</string>
    <string name="severely_obese">Severely obese</string>
    <string name="very_severely_obese">Very severely obese</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_the_weight">Enter the weight</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="calculate">Calculate</string>
    <string name="multipli">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add">add</string>
    <string name="sub">sub</string>
    <string name="comma">.</string>
    <string name="_0">0</string>
    <string name="division">/</string>
    <string name="eql">=</string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div_sign" translatable="false">/</string>
    <string name="clear_sign" translatable="false">C</string>
    <string name="ce_sign" translatable="false">CE</string>
    <string name="add_sign" translatable="false">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="sub_sign" translatable="false">-</string>
    <string name="per_sign" translatable="false">%</string>
    <string name="dot_sign" translatable="false">.</string>
    <string name="eql_sign" translatable="false">=</string>

    <string-array name="sp_wzrost">
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
    </string-array>
    <string-array name="wzrostJednostka">
        <item>cm</item>
        <item>m</item>
    </string-array>
    <string-array name="wagaJednostka">
        <item>kg</item>
    </string-array>


</resources>